gitops/apps/squad-a/webserver-go-01/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver-go-01-virtualservice
spec:
  gateways:
    - default/squad-a-go-gateway
  hosts:
    - squad.a.go.lab.k8s.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: webserver-go-01-svc.default.svc.cluster.local
            port:
              number: 8080
          weight: 100
